[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hummingbot-api-client"
version = "1.5.3"
description = "An async Python client for Hummingbot API"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    {name = "Federico Cardoso", email = "federico.cardoso.e@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp",
]

[project.urls]
Homepage = "https://github.com/hummingbot/hummingbot-api-client"
Documentation = "https://github.com/hummingbot/hummingbot-api-client#readme"
Repository = "https://github.com/hummingbot/hummingbot-api-client"
Issues = "https://github.com/hummingbot/hummingbot-api-client/issues"

[tool.setuptools.packages.find]
include = ["hummingbot_api_client*"]
